Update: Week1 learning log (2/6 Docker containerized development)

--- a/platform-engineering/docs/learning-logs/2026-02-week1.md
+++ b/platform-engineering/docs/learning-logs/2026-02-week1.md
@@ -76,3 +76,82 @@
 - エーピーコミュニケーションズ: https://www.ap-com.co.jp/platform-engineering-info/
 
 ---
+
+## 2/4（水）
+**学習時間:** 0.5時間
+**学習内容:**
+- Issue #1（プラットフォームエンジニアリング概念学習）クローズ
+- Issue #2（Docker基礎復習・環境構築）作成
+- Docker環境確認
+  - Colima起動確認
+  - docker, docker compose動作確認
+  - hello-worldコンテナ実行成功
+  - nginxコンテナ起動・停止テスト成功
+
+**気づき・メモ:**
+- Colima環境でDocker問題なく動作
+- 基本的なコンテナ操作は問題なし
+
+**参考資料:**
+- なし
+
+---
+
+
+## 2/6（金）
+**学習時間:** 2.5時間
+**学習内容:**
+- Issue #1（プラットフォームエンジニアリング概念学習）クローズ
+- Issue #2（Docker基礎復習・環境構築）作成・着手
+- Docker環境確認
+  - Colima起動確認
+  - docker, docker compose動作確認
+  - hello-worldコンテナ実行成功
+  - nginxコンテナ起動・停止テスト成功
+- 完全コンテナベース開発環境構築
+  - Node.js + Express APIプロジェクト作成
+  - docker-compose.ymlで開発・本番環境分離
+  - 開発環境（dev）：ホットリロード対応
+  - 本番環境（prod）：マルチステージビルド + セキュリティ対応
+- Dockerfile作成（本番用）
+  - マルチステージビルド実装
+  - 非rootユーザー実行（expressjs:1001）
+  - alpine版で軽量化
+- セキュリティ確認
+  - 非rootユーザー動作確認（apk add でPermission denied確認）
+  - イメージサイズ最適化確認
+  - プロセス確認（PID 1がexpressjsユーザー）
+
+**学んだこと:**
+- 完全コンテナベース開発のメリット
+  - ローカル環境を汚さない
+  - チーム全員が同じ環境で開発可能
+  - プラットフォームエンジニアリング的にも正しいアプローチ
+- ヒアドキュメント（<< 'EOF'）の仕組み
+  - 終了マーカーは自由に設定可能
+  - シングルクォートで変数展開を抑制
+- Dockerのセキュリティベストプラクティス
+  - 非rootユーザーで実行
+  - マルチステージビルドでイメージサイズ削減
+  - alpine版で攻撃面を減らす
+- docker-composeのprofiles機能
+  - 開発環境と本番環境を1ファイルで管理
+  - `--profile production` で環境切り替え
+
+**気づき・メモ:**
+- Colima環境でDocker問題なく動作
+- dev/prod環境でDockerfileを分ける必要なし（devは既存イメージ使用）
+- セキュリティ意識を持った設計の重要性
+- API開発はプラットフォームエンジニアリングの中核
+
+**参考資料:**
+- Docker公式ドキュメント
+- Node.js公式イメージ: https://hub.docker.com/_/node
+- docker-compose公式ドキュメント
+
+**次回やること:**
+- PostgreSQL追加（docker-composeでマルチコンテナ）
+- .dockerignore作成
+- マルチステージビルドの深掘り
+
+---
