Update: Week1 learning log (2/9 Docker multi-container setup)

--- a/platform-engineering/docs/learning-logs/2026-02-week1.md
+++ b/platform-engineering/docs/learning-logs/2026-02-week1.md
@@ -155,3 +155,50 @@
 - マルチステージビルドの深掘り
 
 ---
+
+## 2/9（日）
+**学習時間:** 1.5時間
+**学習内容:**
+- docker-composeにPostgreSQL追加
+  - マルチコンテナ構成（アプリ + DB）
+  - 環境変数でDB接続文字列管理
+  - depends_on でコンテナ起動順序制御
+  - volumesでデータ永続化
+- Express APIからPostgreSQL接続実装
+  - pg（node-postgres）ライブラリ使用
+  - /db-test エンドポイント追加
+  - 接続テスト成功
+- .dockerignore作成
+  - ビルドコンテキスト最適化
+  - 不要ファイル除外（node_modules, .git, READMEなど）
+  - イメージサイズ削減（200MB以下確認）
+- ポート競合のトラブルシューティング
+  - ローカルのPostgreSQL停止で解決
+
+**学んだこと:**
+- docker-composeでのマルチコンテナ管理
+  - services間の依存関係（depends_on）
+  - named volumesでのデータ永続化
+  - 環境変数による設定の外部化
+- .dockerignoreの重要性
+  - ビルド時のみ効く（volumes マウントは対象外）
+  - ビルドの度に参照される
+  - キャッシュとは独立した仕組み
+- コンテナベース開発の利点
+  - 開発環境と本番環境の差異を最小化
+  - チーム全員が同じDB環境を使える
+
+**気づき・メモ:**
+- ポート競合はよくあるトラブル
+- DATABASE_URLで接続文字列を管理するのがベストプラクティス
+- .dockerignoreとDockerfileのマルチステージビルドで二重に最適化
+
+**参考資料:**
+- Docker Compose公式ドキュメント: https://docs.docker.com/compose/
+- node-postgres: https://node-postgres.com/
+- PostgreSQL Docker Hub: https://hub.docker.com/_/postgres
+
+**次回やること:**
+- Issue #3: Kubernetes概念学習
+
+---
