Update: Week2 learning log (2/14 Kubernetes実践完了)

--- a/platform-engineering/docs/learning-logs/2026-02-week2.md
+++ b/platform-engineering/docs/learning-logs/2026-02-week2.md
@@ -130,7 +130,148 @@ Pod × replicas数 が生成
 
 ---
 
-<!-- 勉強した日だけ、上のテンプレートをコピペして追記 -->
+## 2/14（金）
+**学習時間:** 3時間
+**学習内容:**
+- Kubernetes実践（minikube環境構築〜アプリデプロイ）
+  - minikube環境構築（Colima + Docker driver）
+  - kubectl基本操作習得
+  - nginxデプロイ（コマンドライン）
+  - YAMLマニフェスト作成
+    - nginx-deployment.yaml
+    - nginx-service.yaml
+    - express-deployment.yaml
+    - express-service.yaml
+  - 自作Express APIのK8sデプロイ成功
+  - Service（NodePort）で外部公開
+  - 複数Pod（レプリカ2個）で負荷分散確認
+
+**実践した流れ:**
+
+### minikube起動からnginxデプロイまで
+1. **minikube起動**
+```bash
+   minikube start --driver=docker
+   kubectl get nodes  # クラスタ確認
+```
+
+2. **nginxデプロイ（コマンドライン）**
+```bash
+   kubectl create deployment nginx --image=nginx
+   kubectl get all  # リソース確認
+```
+
+3. **ポートフォワードでアクセス**
+```bash
+   kubectl port-forward pod/nginx-xxx 8080:80
+   # ブラウザで http://localhost:8080 確認
+```
+
+### YAMLマニフェストでの管理
+4. **既存リソース削除**
+```bash
+   kubectl delete deployment nginx
+```
+
+5. **YAMLファイル作成・適用**
+   - Deployment: replicas=2, nginx:1.25-alpine
+   - Service: NodePort (30080)
+```bash
+   kubectl apply -f nginx-deployment.yaml
+   kubectl apply -f nginx-service.yaml
+   minikube service nginx-service  # 動作確認
+```
+
+### Express APIのK8sデプロイ
+6. **Dockerイメージ準備**
+```bash
+   docker build -t express-api:v1 .
+   minikube image load express-api:v1
+```
+
+7. **YAMLファイル作成・デプロイ**
+   - imagePullPolicy: Never（ローカルイメージ使用）
+   - replicas: 2
+   - Service: NodePort (30300)
+
+8. **動作確認**
+```bash
+   minikube service express-api-service
+   curl http://<IP>:30300/
+   curl http://<IP>:30300/health
+   # → APIレスポンス成功
+```
+
+**理解した重要概念:**
+
+### K8sクラスタとリソースの関係
+```
+minikube（K8sクラスタ全体）
+└── Node: minikube（control-plane）
+    ├── Deployment（設計図）
+    │   └── ReplicaSet（Pod生成マシン）
+    │       └── Pod × N（実行中のアプリ）
+    └── Service（アクセスポイント）
+```
+
+### DeploymentとPodの関係
+- Deploymentは設計図、Podは実行中のインスタンス
+- `kubectl create deployment` → K8sが自動でReplicaSet → Pod生成
+- Podは「スケーリングできる最大数」ではなく「実行中のアプリの実体」
+
+### Serviceの役割
+- Podは頻繁に作り直されIPが変わる → 直接アクセス不可
+- Serviceが固定のアクセスポイント（受け口）として機能
+- 複数Podへ自動ルーティング（負荷分散）
+
+### スケーリングと閾値設定
+- デフォルトreplicas: 1
+- `kubectl scale deployment <name> --replicas=N` で増減
+- HPA（Horizontal Pod Autoscaler）で自動スケーリング
+  - CPU/メモリ使用率
+  - リクエスト数/秒
+  - カスタムメトリクス
+  - スケーリング速度制限（stabilizationWindow）
+
+### Docker環境の分離
+- ホストのDocker（Colima）≠ minikube内部のDocker
+- `minikube image load` でイメージをminikube内部にコピー
+- `--driver=docker` = minikubeをDockerコンテナで動かす（イメージ共有ではない）
+- 本番環境ではDocker Hub/GCR等のレジストリ使用
+
+### YAMLマニフェストのメリット
+- Git管理可能（バージョン管理）
+- 再現性（同じ環境を何度でも作れる）
+- レビュー可能（チーム開発）
+- Infrastructure as Code
+
+### Colima環境での注意点
+- `minikube service <name>` が正解
+- `curl $(minikube ip):30080` は動かない（Colima VM内にminikubeがいるため）
+- `minikube tunnel` や `kubectl port-forward` が代替手段
+
+**学んだこと:**
+- K8sの宣言的管理の威力（設計図を渡すだけでK8sが全自動）
+- YAMLファイルによるInfrastructure as Codeの実践
+- ローカル開発環境でもK8sの本質的な動作を体験できる
+- プラットフォームエンジニアリングの「自動化」「セルフサービス」の具体例
+- スケーリングは単なるPod数の増減だが、その背後に複雑な制御が可能
+
+**気づき・メモ:**
+- minikubeは学習・開発に最適（本番環境との違いを理解した上で）
+- YAMLファイル管理の重要性（コマンドラインは一時的な確認用）
+- imagePullPolicy: Never の指定が必須（ローカルイメージ使用時）
+- Serviceの種類（ClusterIP, NodePort, LoadBalancer）の使い分けが重要
+- 今後はチートシート作成が必要
+
+**参考資料:**
+- Kubernetes公式ドキュメント: https://kubernetes.io/docs/
+- minikube公式ドキュメント: https://minikube.sigs.k8s.io/docs/
+
+**次回やること:**
+- ConfigMap/Secretの理解
+- Helmの基礎学習
+- CI/CDパイプライン構築準備
 
 ---
 
